[gd_scene load_steps=28 format=3 uid="uid://dajsoxawargk1"]

[ext_resource type="Script" uid="uid://cpf0vof1la4bo" path="res://main/battle/battle.gd" id="1_ip7xm"]
[ext_resource type="Texture2D" uid="uid://cc1tayp6vmxrl" path="res://main/player/player_portait.png" id="2_oxp8w"]
[ext_resource type="FontFile" uid="uid://figoqy7xtpx5" path="res://PressStart2P-Regular.ttf" id="2_vkqg8"]
[ext_resource type="PackedScene" uid="uid://de37unrvy5g8p" path="res://main/battle/player_attack.tscn" id="3_7sfm4"]
[ext_resource type="PackedScene" uid="uid://duq3wnc6qhgw1" path="res://main/enemy_attack_mini_games/enemy_attack_geometry_dash/enemy_attack_geometry_dash.tscn" id="3_o63kq"]
[ext_resource type="Texture2D" uid="uid://de0vdc5lb1abx" path="res://main/enemies/glorb_frog/glorb_sprite.png" id="4_18tdr"]
[ext_resource type="Texture2D" uid="uid://d2iqlbex60a1s" path="res://main/battle/sprites/AttackButton_Icon.png" id="5_33lwt"]
[ext_resource type="Texture2D" uid="uid://dn63mfionmbs0" path="res://main/battle/sprites/InventoryButton_Icon.png" id="6_c6s1a"]
[ext_resource type="Texture2D" uid="uid://dl3r7o14ksqff" path="res://main/battle/sprites/SayButton_Icon.png" id="7_vkqg8"]
[ext_resource type="Texture2D" uid="uid://cy6yl5cu1x4om" path="res://main/battle/sprites/HackButton_Icon.png" id="8_is2p5"]
[ext_resource type="PackedScene" uid="uid://bh0uaqro0rbyo" path="res://main/enemy_attack_mini_games/enemy_attack_fruit_slasher/enemy_attack_fruit_slasher.tscn" id="8_xav1o"]
[ext_resource type="PackedScene" uid="uid://dkaqsavsx35bt" path="res://main/enemy_attack_mini_games/enemy_attack_focus/enemy_attack_focus.tscn" id="9_keope"]
[ext_resource type="PackedScene" uid="uid://cj1naildc5r7d" path="res://main/enemy_attack_mini_games/enemy_attack_shield_orbit/enemy_attack_shield_orbit.tscn" id="10_xav1o"]

[sub_resource type="LabelSettings" id="LabelSettings_yv0sx"]
font = ExtResource("2_vkqg8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ksl0e"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x50yd"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nk04"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kw4tk"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_keope"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fv4m"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_keope"]
font = ExtResource("2_vkqg8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0npn6"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0bho"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xav1o"]
bg_color = Color(0.8875768, 0.47768772, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gapho"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouvwj"]
bg_color = Color(0, 0, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66um8"]
bg_color = Color(0.69991606, 0.44884825, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="Battle" type="CanvasLayer"]
script = ExtResource("1_ip7xm")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerBox" type="VBoxContainer" parent="VBoxContainer/TopPanel"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="VBoxContainer/TopPanel/PlayerBox"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("2_oxp8w")

[node name="Name" type="Label" parent="VBoxContainer/TopPanel/PlayerBox"]
layout_mode = 2
text = "YOU"
label_settings = SubResource("LabelSettings_yv0sx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHPBar" type="ProgressBar" parent="VBoxContainer/TopPanel/PlayerBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ksl0e")
theme_override_styles/fill = SubResource("StyleBoxFlat_x50yd")
value = 100.0
show_percentage = false

[node name="Spacer" type="Control" parent="VBoxContainer/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyBox" type="VBoxContainer" parent="VBoxContainer/TopPanel"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="VBoxContainer/TopPanel/EnemyBox"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("4_18tdr")

[node name="Name" type="Label" parent="VBoxContainer/TopPanel/EnemyBox"]
layout_mode = 2
text = "GLORB"

[node name="EnemyHPBar" type="ProgressBar" parent="VBoxContainer/TopPanel/EnemyBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_3nk04")
theme_override_styles/fill = SubResource("StyleBoxFlat_kw4tk")
fill_mode = 1
show_percentage = false

[node name="Arena" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Arena"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GameViewport" type="Control" parent="VBoxContainer/Arena"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Arena/GameViewport"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_keope")

[node name="EnemyAttackFruitSlasher" parent="VBoxContainer/Arena/GameViewport/PanelContainer" instance=ExtResource("8_xav1o")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyAttackGeometryDash" parent="VBoxContainer/Arena/GameViewport/PanelContainer" instance=ExtResource("3_o63kq")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyAttackShieldOrbit" parent="VBoxContainer/Arena/GameViewport/PanelContainer" instance=ExtResource("10_xav1o")]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerAttack" parent="VBoxContainer/Arena/GameViewport/PanelContainer" instance=ExtResource("3_7sfm4")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="EnemyAttackFocus" parent="VBoxContainer/Arena/GameViewport/PanelContainer" instance=ExtResource("9_keope")]
unique_name_in_owner = true
layout_mode = 2

[node name="LogPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="RichTextLabel" type="Label" parent="VBoxContainer/LogPanel"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_3fv4m")
label_settings = SubResource("LabelSettings_keope")

[node name="ActionsPanel" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Attack" type="Button" parent="VBoxContainer/ActionsPanel"]
custom_minimum_size = Vector2(47, 46)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_0npn6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_s0bho")
icon = ExtResource("5_33lwt")
icon_alignment = 1

[node name="Inventory" type="Button" parent="VBoxContainer/ActionsPanel"]
custom_minimum_size = Vector2(47, 46)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_xav1o")
theme_override_styles/disabled = SubResource("StyleBoxFlat_gapho")
icon = ExtResource("6_c6s1a")
icon_alignment = 1

[node name="Say" type="Button" parent="VBoxContainer/ActionsPanel"]
custom_minimum_size = Vector2(47, 46)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_ouvwj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_gapho")
icon = ExtResource("7_vkqg8")
icon_alignment = 1

[node name="Hack" type="Button" parent="VBoxContainer/ActionsPanel"]
custom_minimum_size = Vector2(47, 46)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_66um8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_gapho")
icon = ExtResource("8_is2p5")
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/ActionsPanel/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="VBoxContainer/ActionsPanel/Inventory" to="." method="_on_inventory_pressed"]
